public interface FineStrategy {
    double calculerAmende(int joursRetard);
}
