public class LivreOrdinaire extends Livre {
    public LivreOrdinaire(String titre, String auteur) {
        super(titre, auteur, Categorie.GENERALE);
    }
}
